--- a/templates/quote/index.html.twig
+++ b/templates/quote/index.html.twig
@@ -1,20 +1,41 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello QuoteController!{% endblock %}
+{% block head %}
+{% endblock head %}
+
+
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<div id="video-background">
+    <div id="text-container">
+      <h1> This is a generator of random anime quotes </h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/rohff/Desktop/random-quote-api/src/Controller/QuoteController.php'|file_link(0) }}">src/Controller/QuoteController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/rohff/Desktop/random-quote-api/templates/quote/index.html.twig'|file_link(0) }}">templates/quote/index.html.twig</a></code></li>
-    </ul>
-</div>
+     <p> Anime : {{animequote.anime}}
+      <br/>
+      Character : {{animequote.character}}
+      <br/>
+      Quote : {{animequote.quote}}
+      </p>
+   
+        </div>
+        <div id="video-container">
+          <video id="video" src="{{asset("video/videoplayback.mp4")}}"
+            autoplay muted loop>
+          </video>
+          <div id="overlay"></div>
+
+        </div>
+        
+    </div>
+  </div>
+  
+
+{% block javascripts %}
+<script src="{{ asset('js/video.js') }}"></script>
+
+{% endblock  %}
+
+
 {% endblock %}
